Jooq Plugin Finished